# mlir_tutorial

./: CMakeLists.txt  LICENSE  README.md
docs/: 03_passes.md  04_lowering.md
examples/: intro.toy  pipeline.sh
include/toy/: ToyDialect.h  ToyOps.h
include/toy/Transforms/: Passes.h
passes/: CMakeLists.txt  CanonicalizePass.cpp  Passes.cpp  ShapeInferencePass.cpp  ToyDCEPass.cpp
test/: toy-dce.mlir
tools/: CMakeLists.txt  toy-opt.cpp
toy/: CMakeLists.txt  DialectRegistration.cpp  Ops.cpp  ToyDialect.td  ToyOps.td
